--- a/PixBB.Core/PixBB.Core.csproj
+++ b/PixBB.Core/PixBB.Core.csproj
@@ -3,10 +3,12 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <Authors>Luis Jorge</Authors>
+    <PackageId>PixBB.Core</PackageId>
     <Company>WiseIn Tech</Company>
     <Product>PixBB.Core</Product>
     <Description>Biblioteca de acesso à api do serviço de pagamentos instantaneo brasileiro(PIX) do Banco do Brasil baseada em .Net Standard 2.0.</Description>
     <Version>1.0.0</Version>
+    <RepositoryUrl>https://github.com/luisjurassic/pixbb-core</RepositoryUrl>
     <LangVersion>latest</LangVersion>
     <Copyright>Luis Jorge</Copyright>
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
@@ -23,13 +25,6 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Include="LICENSE.md">
-      <Pack>True</Pack>
-      <PackagePath></PackagePath>
-    </None>    
   </ItemGroup>
 
 </Project>
